--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
+    "react-scroll": "^1.9.0",
+    "react-scroll-trigger": "^0.6.14",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
